Seq/install-env.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  logging
