Seq/install-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-external-ingress
  namespace: logging
  labels:
    name: seq-external-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - seq.paradox-server.ru
    secretName: seq-paradox-server-tls
  rules:
  - host: seq.paradox-server.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: seq
            port: 
              name: ui
  ingressClassName: nginx
